<resources>
    <string name="app_name">DemoApplication</string>
    <string name="database_connection_settings">Database Connection Settings</string>
    <string name="database_server">Database Server</string>
    <string name="server">Server:</string>
    <string name="username">Username:</string>
    <string name="password">Password</string>
    <string name="database_port">Database Port</string>
    <string name="database">Database</string>
    <string name="save_db_details">Save DB Details &amp; Connect</string>
    <string name="id">ID</string>
    <string name="test_database_records">Test Database Records</string>
    <string name="add_random_record">Add Random Record</string>
    <string name="select_records">Select Records</string>
</resources>
